# HealthDelta

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TIME.csv  compose.backend.dev.yaml  pyproject.toml
.codex/: README.md
.codex/decisions/: ADR_1_self-hosted-xcode-runner.md  ADR_2_ingest_run_id_derivation.md  README.md
.github/: pull_request_template.md
docs/: architecture.md  cd_plan.md  identity_resolution.md  ndjson_schema.md  plan.md  runbook_cd.md  runbook_cli.md  runbook_deid.md  runbook_duckdb.md  runbook_identity.md  runbook_incremental.md  runbook_ingest.md  runbook_ios_export.md  runbook_ndjson.md  runbook_ndjson_validate.md  runbook_note.md  runbook_operator.md  runbook_orin_deploy.md  runbook_pipeline.md  runbook_profile.md  runbook_reports.md  runbook_share_bundle.md  runbook_xcode.md  threat_model.md
healthdelta/: __init__.py  __main__.py  _version.py  backend_server.py  cli.py  deid.py  duckdb_tools.py  export_layout.py  identity.py  ingest.py  ndjson_export.py  ndjson_validate.py  note.py  operator.py  pipeline.py  profile.py  progress.py  reporting.py  share_bundle.py  state.py  version.py
mac/ingest/: README.md
tests/: README.md  test_backend_server.py  test_ci_sanity.py  test_deid.py  test_duckdb.py  test_duckdb_ios.py  test_identity.py  test_identity_workflow.py  test_incremental.py  test_ingest.py  test_ingest_ios.py  test_ndjson_export.py  test_ndjson_validate.py  test_note.py  test_operator.py  test_pipeline.py  test_profile.py  test_progress.py  test_reports.py  test_reports_ios.py  test_share_bundle.py  test_version.py
(+242 files in other folders)
