[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthdelta"
version = "0.0.0"
description = "HealthDelta tooling"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0,<2.0.0",
]

[project.scripts]
healthdelta = "healthdelta.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["healthdelta*"]
