[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthdelta"
dynamic = ["version"]
description = "HealthDelta tooling"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=1.0.0,<2.0.0",
]

[project.scripts]
healthdelta = "healthdelta.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["healthdelta*"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
write_to = "healthdelta/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
